--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h3 id="title">How time is it?</h3>
+    <h3 id="title">What time is it?</h3>
     <div class="clock-line">
       <div class="day-box box">
         <span id="day">Mo.</span>
